<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.ReadyToIdentifyActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/primary_bg_clr"
        app:layout_constraintBottom_toTopOf="@+id/ad_frame"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_margin="@dimen/_15sdp"
            android:src="@drawable/back_icon_camera"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:elevation="@dimen/_10sdp"
            app:layout_constraintHeight_percent="0.47"
            android:src="@drawable/insect_img_main"
            app:layout_constraintBottom_toTopOf="@id/guideLine1"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout9"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/ready_to_identify_bg"
            android:paddingTop="@dimen/_7sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image">

            <TextView
                android:id="@+id/textView25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/ready_to"
                android:textColor="@color/dark_text"
                android:textSize="@dimen/_17sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView26"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/identify"
                android:textColor="@color/primary"
                android:textSize="@dimen/_17sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView25" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="@dimen/_7sdp"
                android:gravity="center"
                app:layout_constraintBottom_toTopOf="@+id/textView27"
                app:layout_constraintTop_toBottomOf="@+id/textView26">
                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/scan_instructions"
                            android:textColor="@color/dark_text"
                            android:fontFamily="@font/nunito_regular"
                            android:textSize="@dimen/_11sdp"
                            android:lineSpacingExtra="@dimen/_3sdp"
                            />

                    </LinearLayout>

                </ScrollView>
            </LinearLayout>


            <TextView
                android:id="@+id/textView27"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_medium"
                android:gravity="center"
                android:layout_marginBottom="@dimen/_7sdp"
                android:text="@string/here_s_your_chosen_creature_nlet_s_find_out_what_it_is"
                android:textColor="@color/dark_text"
                android:textSize="@dimen/_11sdp"
                app:layout_constraintBottom_toTopOf="@+id/scanNowBtn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/scanNowBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/next_btn_bg"
                android:padding="@dimen/_7sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/textView27"
                app:layout_constraintStart_toStartOf="@+id/textView27">

                <ImageView
                    android:id="@+id/imageView16"
                    android:layout_width="@dimen/_28sdp"
                    android:layout_height="@dimen/_28sdp"
                    android:background="@drawable/bottom_nav_circle"
                    android:src="@drawable/forward_arrow"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:layout_editor_absoluteX="9dp" />

                <TextView
                    android:id="@+id/textView29"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito_bold"
                    android:text="@string/scan_now"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.35" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideLine1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.45" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <FrameLayout
        android:id="@+id/ad_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="6dp">

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmer_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/ad_bg_color"
            android:padding="@dimen/_2sdp">

            <include
                layout="@layout/admob_native_media_small_layout_new"
                android:visibility="invisible" />
        </com.facebook.shimmer.ShimmerFrameLayout>

    </FrameLayout>
    
</androidx.constraintlayout.widget.ConstraintLayout>