<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/tools"
    android:layout_marginStart="@dimen/_15sdp"
    android:layout_marginEnd="@dimen/_15sdp"
    app:ignore="NamespaceTypo">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:backgroundTint="@color/secondary"
        card_view:cardBackgroundColor="@color/secondary"
        card_view:cardCornerRadius="@dimen/_15sdp"
        card_view:layout_constraintBottom_toBottomOf="parent"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintHorizontal_bias="1.0"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toTopOf="parent"
        card_view:strokeColor="@color/primary"
        card_view:strokeWidth="0dp">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/linearLayout12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/_55sdp"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/bell_img"/>
                
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_7sdp"
                    android:text="@string/you_ve_used_all_your_nfree_scans"
                    android:textColor="@color/dark_text"
                    android:textSize="@dimen/_14sdp"
                    android:fontFamily="@font/nunito_bold"
                    android:gravity="center"
                    />

            </LinearLayout>

            <TextView
                android:id="@+id/textView28"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/you_re_out_of_free_scans_for_today"
                android:textColor="@color/dark_text"
                android:textSize="@dimen/_12sdp"
                android:fontFamily="@font/nunito_regular"
                android:layout_marginTop="@dimen/_5sdp"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toBottomOf="@+id/linearLayout12" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/watch_ad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_15sdp"
                android:layout_marginVertical="@dimen/_15sdp"
                app:cardCornerRadius="@dimen/_10sdp"
                app:layout_editor_absoluteX="13dp"
                android:backgroundTint="@android:color/transparent"
                card_view:layout_constraintBottom_toTopOf="@+id/buyPremium"
                card_view:layout_constraintTop_toBottomOf="@+id/textView28"
                card_view:strokeColor="@color/primary">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingVertical="@dimen/_12sdp">

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/nunito_bold"
                        android:text="Watch Ad to Scan"
                        android:textColor="@color/primary"
                        android:textSize="@dimen/_11sdp"
                        app:layout_constraintBottom_toTopOf="@+id/watchAdText"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_chainStyle="packed"
                        card_view:layout_constraintBottom_toBottomOf="parent"
                        card_view:layout_constraintEnd_toEndOf="parent"
                        card_view:layout_constraintStart_toStartOf="parent"
                        card_view:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:layout_width="@dimen/_16sdp"
                        android:layout_height="@dimen/_16sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:layout_marginBottom="3dp"
                        android:src="@drawable/stars_p"
                        app:layout_constraintEnd_toStartOf="@+id/textView7"
                        app:layout_constraintTop_toTopOf="@+id/textView7"
                        card_view:layout_constraintBottom_toBottomOf="@+id/textView7"
                        card_view:layout_constraintEnd_toStartOf="@+id/textView7"
                        card_view:layout_constraintTop_toTopOf="@+id/textView7"
                        card_view:tint="@color/primary" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/buyPremium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:backgroundTint="@color/primary"
                app:cardBackgroundColor="@color/primary"
                app:cardCornerRadius="@dimen/_10sdp"
                app:layout_constraintTop_toBottomOf="@id/watchAdAndContinue"
                card_view:layout_constraintBottom_toTopOf="@id/scanDiffrent"
                card_view:layout_constraintTop_toBottomOf="@+id/watch_ad"
                card_view:strokeWidth="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:paddingVertical="@dimen/_12sdp">
                    
                    <ImageView
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:src="@drawable/star_icon"/>

                    <TextView
                        android:id="@+id/textView7s"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/nunito_bold"
                        android:text="@string/scan_with_pro_version"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_13sdp"
                        app:layout_constraintBottom_toTopOf="@+id/textView8s"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        card_view:layout_constraintBottom_toTopOf="@+id/textView8s"
                        card_view:layout_constraintEnd_toEndOf="parent"
                        card_view:layout_constraintStart_toStartOf="parent"
                        card_view:layout_constraintTop_toTopOf="parent" />

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/scanDiffrent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/scan_a_diffrent_object"
                android:textColor="@color/primary"
                android:textSize="@dimen/_11sdp"
                android:layout_marginBottom="@dimen/_25sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <ImageView
        android:id="@+id/cross_btn"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:src="@drawable/theme_cross"
        card_view:layout_constraintBottom_toTopOf="@+id/cardView"
        card_view:layout_constraintEnd_toEndOf="@+id/cardView"
        card_view:layout_constraintStart_toEndOf="@+id/cardView"
        card_view:layout_constraintTop_toTopOf="@+id/cardView" />

    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_68sdp"
        android:src="@drawable/scan_limit_exceed_img"
        card_view:layout_constraintBottom_toTopOf="@+id/cardView"
        card_view:layout_constraintEnd_toEndOf="@+id/cardView"
        card_view:layout_constraintStart_toStartOf="@+id/cardView"
        card_view:layout_constraintTop_toTopOf="@+id/cardView" />
</androidx.constraintlayout.widget.ConstraintLayout>